Add mysql database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,12 @@ server.port = 8090
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.url=us-cdbr-iron-east-05.cleardb.net/heroku_804377e227e9370?reconnect=true
+spring.datasource.username=b555f6c7b7f06c
+spring.datasource.password=b1331d04
 spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
