--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port = 8090
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=us-cdbr-iron-east-05.cleardb.net/heroku_804377e227e9370?reconnect=true
+spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-05.cleardb.net/heroku_804377e227e9370?reconnect=true
 spring.datasource.username=b555f6c7b7f06c
 spring.datasource.password=b1331d04
 spring.jpa.show-sql=false
